--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
     <link rel="stylesheet" href="./styles/style.css">
 </head>
-<body>
+<body class="flex">
     
     <main id="calculator">
 
-        <div class="output-container">
+        <div class="output-container flex">
             <input type="text" id="output-box" disabled>
-            <button class="delete-btn">x</button>
+            <button id="delete-btn" class="flex">x</button>
         </div>
 
         <div class="input-button-container">
