--- a/index.html
+++ b/index.html
@@ -45,5 +45,7 @@
             <button class="input-button" id="plus">+</button>
         </div>
     </main>
+
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
