Added change theme feature

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body class="flex">
+
+    
+    <button id="theme-btn">
+        <img src="./images/theme2.png" alt="Change theme" height="35">
+    </button>
     
     <main id="calculator">
 
