Added feature to preview result

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <button id="delete-btn" class="flex">x</button>
         </div>
 
+        <div id="result-preview"></div>
+
         <div class="input-button-container">
             <button class="input-button" id="clear">AC</button>
             <button class="input-button" id="square">x<sup>2</sup></button>
